typescript/checker/tests/conformance/types/primitives/null/directReferenceToNull.ts.stderr
error: NameNotFound {
    sym: Ident(
        Ident {
            span: Span {
                lo: BytePos(
                    7,
                ),
                hi: BytePos(
                    11,
                ),
                ctxt: #0,
            },
            sym: Atom('Null' type=inline),
            type_ann: None,
            optional: false,
        },
    ),
    span: Span {
        lo: BytePos(
            7,
        ),
        hi: BytePos(
            11,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/primitives/null/directReferenceToNull.ts:1:8
  |
1 | var x: Null;
  |        ^^^^

